--- a/cor.html
+++ b/cor.html
@@ -46,3 +46,90 @@
     </div>
     
 </section>
+
+<section>
+    <div class="table_placer">
+        <table>
+            <tr class="c_header">
+                <th><h2>CODE</h2></th>
+                <th><h2>SUBJECT TITLE</h2></th>
+                <th><h2>U</h2> <br><h4>Lec</h4></th>
+                <th><h2>N</h2> <br><h4>Lab</h4></th>
+                <th><h2 style="letter-spacing: 6mm;">IT</h2> <br><h4>Credit</h4> </th>
+                <th><h2>SECTION</h2></th>
+                <th><h2>SCHEDULE</h2></th>
+                <th><h2>FACULTY</h2></th>
+            </tr>
+            <tr>
+                <td>IT8/L</td>
+                <td>Advance Database System</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>M 7:00-9:00am<br>TH 7:00-10:00am</td>
+                <td>Lopez, Menchi L.</td>
+            </tr>
+            <tr>
+                <td>IT9/L</td>
+                <td>Network Technology 2</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>T 01:00-4:00PM<br>F 01:00-3:00PM</td>
+                <td>Bagio, Kim C.</td>
+            </tr>
+            <tr>
+                <td>IT11/L</td>
+                <td>Web System and Technologies</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>T 7:00-9:00AM<br>F 7:00-10:00AM</td>
+                <td>Dosado, Roy Cyril D.</td>
+            </tr>
+            <tr>
+                <td>IT12/L</td>
+                <td>Multimedia System</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>M 1:00-3:00PM<br>TH 1:00-4:00PM</td>
+                <td>Buliag, Rene V.</td>
+            </tr>
+            <tr>
+                <td>GE-ET</td>
+                <td>Ethics</td>
+                <td>3.0</td>
+                <td>0.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>T 11:30-1:00PM<br>F 11:30-1:00PM</td>
+                <td>Maghari, Dionimer</td>
+            </tr>
+            <tr>
+                <td>ITE3/L</td>
+                <td>IT Elective 3</td>
+                <td>2.0</td>
+                <td>1.0</td>
+                <td>3.0</td>
+                <td>BSIT 3 - B3</td>
+                <td>W 07:00-9:00AM<br>S 07:00-10:00AM</td>
+                <td>Dizon, Demy R.</td>
+            </tr>
+            <tr class="all_units">
+                <td></td>
+                <td style="text-align: right;"><h3>Total Units:</h3></td>
+                <td><div><h3>15.0</h3></div></td>
+                <td><div><h3>6.0</h3></div></td>
+                <td><div><h3>21.0</h3></div></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
+    </div>
+</section>
