--- a/cor.html
+++ b/cor.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="psu_logo">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Palawan_State_University_seal.png/1024px-Palawan_State_University_seal.png" alt="psu_logo">
+            <img src="psu-logo.png" alt="psu_logo" width = 100>
         </div>
         <div class="letter_header">
             <p>Republic of the Philippines</p><br>
@@ -133,3 +133,121 @@
         </table>
     </div>
 </section>
+<p><em>Note: Subject marked with "*" is a Special Subject.</em></p>
+
+<section class="low_section">
+    <div class="price">
+        <div class="price_header">
+            <h2>ASSESSED FEES</h2>
+        </div>
+        <div class="price_contents">
+            <div>
+                <p>Tuition Fee (21@200)</p>
+                <p>Examination Materials Fee (21@3)</p>
+                <p>Facilities Enhancement Fee</p>
+                <p>Guidance Fee</p>
+                <p>SGO-Insurance Fee</p>
+                <p>Misc - Cultural Fee</p>
+                <p>Misc - Library Fees</p>
+                <p>Misc - Athlethics</p>
+                <p>Misc - Medical & Dental Fees</p>
+                <p>Misc - School Paper</p>
+                <p>Audio Visual Media Center</p>
+                <p>Student Government Organization Membership Fee</p>
+                <p>Security Fee</p>
+                <p>Misc - Registration Fee</p>
+                <p>Computer Laboratory Fees (IT8/L(500)); IT 9/L(500); IT</p>
+                <p>Internet Fee</p>
+            </div>
+            <div>
+                <p>4,200.00</p>
+                <p>63.00</p>
+                <p>1,000.00</p>
+                <p>100.00</p>
+                <p>50.00</p>
+                <p>100.00</p>
+                <p>200.00</p>
+                <p>300.00</p>
+                <p>100.00</p>
+                <p>100.00</p>
+                <p>100.00</p>
+                <p>140.00</p>
+                <p>300.00</p>
+                <p>100.00</p>
+                <p>3,000.00</p>
+                <p>400.00</p>
+            </div>
+        </div>
+        <div class="evaluation">
+            <h3>Total Assessment: </h3>
+            <h3>Php </h3>
+            <h3>10,253.00 </h3>
+        </div>
+        <div class="settlement">
+            <h3>Total Payment: </h3>
+            <h3></h3>
+            <h3>0.00</h3>
+        </div>
+        <div class="remain_bal">
+            <h3>Outstanding Balance: </h3>
+            <h3>Php </h3>
+            <h3>10,253.00 </h3>
+        </div>
+        
+        <div class="date_settlement">
+            <h2>SCHEDULE OF PAYMENT</h2>
+        </div>
+        <div class="due_settlement">
+            <div class="border-right">
+                <p>1st Payment / Due Date</p>
+                <p>3,890.00 07/12/2023</p> 
+            </div>
+            <div class="room_right">
+                <p>2nd Payment / Due Date</p>
+                <p>3,283.00 09/10/2023</p> 
+            </div>
+            <div>
+                <p>3rd Payment / Due Date</p>
+                <p>3,080.00 12/02/2023</p>
+            </div>
+        </div>
+                     
+    </div>
+    <div class="payback_courier-font">
+        <h3>RULES ON REFUND</h3>
+        <div class="courier-font">
+            <p><em>1. Full refund of tuition fee - Before the start of classes.</em></p>
+            <p><em>2. 80% refund of tuition fee - within 1 week from the start of classes.</em></p>
+            <p><em>3. 50% refund - within 2 weeks from the start of classes.</em></p>
+            <p><em>4. No refund - after the 2nd week of classes.</em></p>
+        </div>
+        <div class="payback">
+            <h4>Official Receipt: </h4>
+            <span class="underline">Underline gyaaaatttdayummmm</span>
+        </div>
+        <div class="valid_date">
+            <h4>Payment/Validation Date: </h4>
+            <span class="underline">Underline gyaaaatttdayummmm</span>
+        </div>
+        <div class="accept">
+            <div>
+                <h4>APPROVED BY:</h4>
+            </div>
+            <div class="admission">
+                <h4>CHERRY ANNE C. DATOR, Ph.D.</h4>
+                <h5>University Registrar</h5>
+            </div>
+        </div>
+    </div>
+</section>
+<section>
+    <div class="preprint_date">
+        <p>Date Printed: August 10, 2023 3:58:57pm</p>
+    </div>
+    <div class="footer">
+        <h3>KEEP THIS CERTIFICATE. YOU WILL BE REQUIRED TO PRESENT THIS IN ALL YOU DEALINGS WITH THE COLLEGE.</h3>
+    </div>
+</section>
+</main>
+</body>
+</html>
